--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
         <link rel="stylesheet" href="./style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
+        <title>Where in the World!</title>
     </head>
     <body>
         <header>
